--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
                             <p>Bernstein's horizontal knowledge structures are segmented, consisting of distinct, often unrelated approaches or languages within a field. These lack a single integrating framework, leading to weaker classification and framing. Boundaries between knowledge areas are less defined, and the rules for acquiring and using knowledge can be more ambiguous or context-dependent. This is typical in fields like the humanities, where different theories (e.g., Marxist, feminist, postcolonial) coexist without a unifying principle.</p>
 
                             <!-- Image inserted between paragraphs in Top Right Card -->
-                            <img src="https://github.com/oeybers-cpu/knowledge_structures/raw/main/jpeg%20(9).jpg" alt="Diagram of horizontal knowledge structure" style="width: 100%; max-width: 400px; height: auto; margin: 15px auto; display: block; border-radius: 8px; border: 1px solid rgba(207, 64, 255, 0.3);">
+                            <img src="https://github.com/oeybers-cpu/knowledge_structures/raw/main/jpeg%20%20(9).jpg" alt="Diagram of horizontal knowledge structure" style="width: 100%; max-width: 400px; height: auto; margin: 15px auto; display: block; border-radius: 8px; border: 1px solid rgba(207, 64, 255, 0.3);">
 
                             <p>The academic literacies model is particularly valuable for understanding horizontal structures. It highlights how students must navigate diverse, often competing genres and discourses within these fields. The model emphasises the situated nature of literacy practices, where meaning, identity, and power are negotiated differently in each segmented area. Rather than a single, correct way to write or argue, students must learn to adapt their literacy practices to the specific, often context-dependent rules (weaker framing) of each segment.</p>
                             <blockquote class="card__quote">
@@ -964,7 +964,7 @@
             <div class="content-section">
                 <h2 class="section-title">Application & Practice</h2>
                 <div class="articles-container">
-                    <!-- Card 3: Genre and Mode Switching -->
+                    <!-- Card 3: Genre and Mode Switching (Image moved out, placeholder added) -->
                     <div class="card">
                         <div class="card__header">
                             <h2 class="card__title">
@@ -972,9 +972,10 @@
                             </h2>
                         </div>
                         <div class="card__body">
-                            <img src="https://github.com/oeybers-cpu/a_lit_models/blob/main/al%20class.png?raw=true"
-                                 alt="Students switching between different communication modes in classroom setting"
-                                 class="card__image">
+                            <!-- IMAGE MOVED OUT - Placeholder div -->
+                            <div style="width: 100%; height: 220px; background-color: #1a1a2a; border-radius: 8px; margin-bottom: 15px; border: 2px dashed rgba(207, 64, 255, 0.3); display: flex; align-items: center; justify-content: center; color: #777; font-size: 0.9rem;">
+                                [Image Placeholder - Will be filled later]
+                            </div>
                             <p>Bernstein's framework helps us understand the complexity of student experience in navigating academic literacies. The requirement to switch between genres (e.g., from discussion notes to essays) and modes (e.g., from speech to writing) reflects the underlying structure of the knowledge domain. In vertical structures, these transitions often involve applying learned principles in new, but related, contexts. In horizontal structures, the transitions can be more abrupt, moving between fundamentally different ways of thinking and writing.</p>
                             <p>The academic literacies model, drawing on New Literacy Studies, emphasises that these shifts are not merely technical. Each genre and mode embodies different social meanings, identities, and power relations. Students must learn not just the forms, but the social practices embedded within them. Understanding this through a Bernsteinian lens reveals how the classification and framing of the underlying knowledge influences the difficulty and nature of these literacy transitions. Explicit pedagogy that makes these demands visible is crucial.</p>
                             <blockquote class="card__quote">
@@ -992,7 +993,7 @@
                         </footer>
                     </div>
 
-                    <!-- Card 4: Pedagogy & Design Frame -->
+                    <!-- Card 4: Pedagogy & Design Frame (Image moved in, diagram kept) -->
                     <div class="card">
                         <div class="card__header">
                             <h2 class="card__title">
@@ -1000,29 +1001,15 @@
                             </h2>
                         </div>
                         <div class="card__body">
-                            <img src="https://github.com/oeybers-cpu/multimodal_grammar/blob/main/digital_communication_africa.png?raw=true"
-                                 alt="Educators applying academic literacies principles in curriculum design"
+                            <!-- MOVED IMAGE FROM 'NAVIGATING GENRES' CARD -->
+                            <img src="https://github.com/oeybers-cpu/a_lit_models/blob/main/al%20class.png?raw=true"
+                                 alt="Students switching between different communication modes in classroom setting"
                                  class="card__image">
                             <p>Bernstein's concepts are crucial for curriculum design and pedagogy. Recognising whether a subject area is predominantly vertical or horizontal helps educators anticipate the literacy challenges students will face. In vertical disciplines, pedagogy might focus on building a strong foundation in core genres and the explicit rules for knowledge construction. In horizontal disciplines, pedagogy must help students understand and navigate the diversity of available discourses and the contexts in which each is appropriate.</p>
-                                                       <!-- Embedded image after the 2nd paragraph -->
+
+                            <!-- Embedded image after the 2nd paragraph (as requested previously) -->
                             <img src="https://github.com/oeybers-cpu/knowledge_structures/blob/main/genres4.png?raw=true" alt="Illustration of different academic genres" style="width: 100%; max-width: 500px; height: auto; margin: 15px auto; display: block; border-radius: 8px; border: 1px solid rgba(207, 64, 255, 0.3);">
 
-                            <p>Lea and Street's academic literacies model operationalises this by advocating for a 'design frame' that makes the social and epistemological nature of academic tasks explicit. This aligns with Bernstein's call for pedagogic discourse that recontextualises knowledge for learners. By understanding the underlying knowledge structure (vertical/horizontal), educators can better design learning experiences that help students understand not just *what* to write, but *why* certain forms are privileged and how they relate to broader social and disciplinary practices. This moves beyond deficit models to a more nuanced understanding of student learning.</p>
-                            <blockquote class="card__quote">
-                                <i class="fas fa-quote-left" aria-hidden="true"></i> Treating such students as collaborators in the development of the academic literacies necessary... can perhaps offer a different and more supportive route.
-                            </blockquote>
-                            <div class="card__meta">
-                                <span class="tag">Pedagogy</span>
-                                <span class="tag">Design Frame</span>
-                                <span class="tag">Curriculum</span>
-                                <span class="tag">Recontextualisation</span>
-                            </div>
-                        </div>
-                        <footer class="card__footer">
-                            Applying the model's principles to create more supportive learning environments.
-                        </footer>
-                    </div>
-```
                             <p>Lea and Street's academic literacies model operationalises this by advocating for a 'design frame' that makes the social and epistemological nature of academic tasks explicit. This aligns with Bernstein's call for pedagogic discourse that recontextualises knowledge for learners. By understanding the underlying knowledge structure (vertical/horizontal), educators can better design learning experiences that help students understand not just *what* to write, but *why* certain forms are privileged and how they relate to broader social and disciplinary practices. This moves beyond deficit models to a more nuanced understanding of student learning.</p>
                             <blockquote class="card__quote">
                                 <i class="fas fa-quote-left" aria-hidden="true"></i> Treating such students as collaborators in the development of the academic literacies necessary... can perhaps offer a different and more supportive route.
