--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@
             <div class="content-section">
                 <h2 class="section-title">Application & Practice</h2>
                 <div class="articles-container">
-                    <!-- Card 3: Genre and Mode Switching (Image moved out, placeholder added) -->
+                    <!-- Card 3: Genre and Mode Switching -->
                     <div class="card">
                         <div class="card__header">
                             <h2 class="card__title">
@@ -972,10 +972,9 @@
                             </h2>
                         </div>
                         <div class="card__body">
-                            <!-- IMAGE MOVED OUT - Placeholder div -->
-                            <div style="width: 100%; height: 220px; background-color: #1a1a2a; border-radius: 8px; margin-bottom: 15px; border: 2px dashed rgba(207, 64, 255, 0.3); display: flex; align-items: center; justify-content: center; color: #777; font-size: 0.9rem;">
-                                [Image Placeholder - Will be filled later]
-                            </div>
+                            <img src="https://github.com/oeybers-cpu/a_lit_models/blob/main/al%20class.png?raw=true"
+                                 alt="Students switching between different communication modes in classroom setting"
+                                 class="card__image">
                             <p>Bernstein's framework helps us understand the complexity of student experience in navigating academic literacies. The requirement to switch between genres (e.g., from discussion notes to essays) and modes (e.g., from speech to writing) reflects the underlying structure of the knowledge domain. In vertical structures, these transitions often involve applying learned principles in new, but related, contexts. In horizontal structures, the transitions can be more abrupt, moving between fundamentally different ways of thinking and writing.</p>
                             <p>The academic literacies model, drawing on New Literacy Studies, emphasises that these shifts are not merely technical. Each genre and mode embodies different social meanings, identities, and power relations. Students must learn not just the forms, but the social practices embedded within them. Understanding this through a Bernsteinian lens reveals how the classification and framing of the underlying knowledge influences the difficulty and nature of these literacy transitions. Explicit pedagogy that makes these demands visible is crucial.</p>
                             <blockquote class="card__quote">
@@ -993,7 +992,7 @@
                         </footer>
                     </div>
 
-                    <!-- Card 4: Pedagogy & Design Frame (Image moved in, diagram kept) -->
+                    <!-- Card 4: Pedagogy & Design Frame -->
                     <div class="card">
                         <div class="card__header">
                             <h2 class="card__title">
@@ -1001,13 +1000,12 @@
                             </h2>
                         </div>
                         <div class="card__body">
-                            <!-- MOVED IMAGE FROM 'NAVIGATING GENRES' CARD -->
-                            <img src="https://github.com/oeybers-cpu/a_lit_models/blob/main/al%20class.png?raw=true"
-                                 alt="Students switching between different communication modes in classroom setting"
+                            <img src="https://github.com/oeybers-cpu/multimodal_grammar/blob/main/digital_communication_africa.png?raw=true"
+                                 alt="Educators applying academic literacies principles in curriculum design"
                                  class="card__image">
                             <p>Bernstein's concepts are crucial for curriculum design and pedagogy. Recognising whether a subject area is predominantly vertical or horizontal helps educators anticipate the literacy challenges students will face. In vertical disciplines, pedagogy might focus on building a strong foundation in core genres and the explicit rules for knowledge construction. In horizontal disciplines, pedagogy must help students understand and navigate the diversity of available discourses and the contexts in which each is appropriate.</p>
 
-                            <!-- Embedded image after the 2nd paragraph (as requested previously) -->
+                            <!-- Embedded image after the 2nd paragraph -->
                             <img src="https://github.com/oeybers-cpu/knowledge_structures/blob/main/genres4.png?raw=true" alt="Illustration of different academic genres" style="width: 100%; max-width: 500px; height: auto; margin: 15px auto; display: block; border-radius: 8px; border: 1px solid rgba(207, 64, 255, 0.3);">
 
                             <p>Lea and Street's academic literacies model operationalises this by advocating for a 'design frame' that makes the social and epistemological nature of academic tasks explicit. This aligns with Bernstein's call for pedagogic discourse that recontextualises knowledge for learners. By understanding the underlying knowledge structure (vertical/horizontal), educators can better design learning experiences that help students understand not just *what* to write, but *why* certain forms are privileged and how they relate to broader social and disciplinary practices. This moves beyond deficit models to a more nuanced understanding of student learning.</p>
@@ -1051,6 +1049,10 @@
                             <span class="tag">Critical Theory</span>
                             <span class="tag">Access</span>
                         </div>
+                        <!-- New image added below the meta tags -->
+                        <img src="https://github.com/oeybers-cpu/knowledge_structures/blob/main/splitpic.png?raw=true"
+                             alt="Split image showing a student's contrasting emotional states while studying"
+                             style="width: 100%; max-width: 500px; height: auto; margin: 15px auto; display: block; border-radius: 8px; border: 1px solid rgba(207, 64, 255, 0.3);">
                     </div>
                     <footer class="card__footer">
                         Understanding the wider significance of the relationship between knowledge structure and literacy practices.
