--- a/index.html
+++ b/index.html
@@ -1026,36 +1026,32 @@
                 </div>
             </div>
 
-            <!-- Centered final card -->
+            <!-- Centered final card - Now "Multimodal Communication" -->
             <div class="centered-card">
                 <div class="card">
                     <div class="card__header">
                         <h2 class="card__title">
-                            <i class="fas fa-globe-africa" aria-hidden="true"></i> Implications & Broader Context
+                            <i class="fas fa-project-diagram" aria-hidden="true"></i> Multimodal Meaning-Making
                         </h2>
                     </div>
                     <div class="card__body">
-                        <img src="https://github.com/oeybers-cpu/Ubuntu_2/blob/main/ubuntu.png?raw=true"
-                             alt="Interconnected academic communities representing global knowledge exchange"
+                        <img src="https://github.com/oeybers-cpu/multimodal_grammar/blob/main/digital_communication_africa.png?raw=true"
+                             alt="Multimodal communication showing integration of different semiotic resources"
                              class="card__image">
-                        <p>Bernstein's theory provides a macro-level understanding of how knowledge is organised within institutions, which directly impacts access and equity. Vertical structures, with their strong rules, can be more transparent but also more exclusionary if the rules are not explicitly taught. Horizontal structures, while potentially more inclusive due to their diversity, can be confusing and lack clear pathways. Understanding these dynamics is essential for addressing issues of 'widening participation' and educational justice.</p>
-                        <p>The academic literacies model complements this by focusing on the micro-level practices of how students encounter and must master these structures. It highlights how literacy is not neutral but is deeply implicated in the reproduction or transformation of these knowledge structures. By combining Bernstein's macro view with the AL model's focus on social practice, educators gain a powerful tool for critiquing current practices and designing more equitable pedagogies that recognise and build upon the complex literacy work students perform as they navigate different forms of knowledge.</p>
+                        <p>In academic settings, meaning is rarely constructed through language alone. The academic literacies model recognises that students engage with and produce texts that combine linguistic, visual, gestural, and spatial elements. This multimodal approach allows for a richer, more complex representation of ideas and arguments.</p>
+                        <p>For instance, a student might use a combination of words, graphs, charts, images, and diagrams in a research report. A presentation might integrate spoken language, slide layouts, animations, and gestures. Understanding the interplay between these different modes is essential for effective academic communication. The model encourages teachers to explicitly teach students how to use these multimodal resources to construct coherent and persuasive arguments.</p>
                         <blockquote class="card__quote">
-                            <i class="fas fa-quote-left" aria-hidden="true"></i> Approaches to student writing and literacy in academic contexts could be conceptualised through the use of three overlapping perspectives or models.
+                            <i class="fas fa-quote-left" aria-hidden="true"></i> Academic literacy is enriched when we recognise and value diverse knowledge traditions and communication practices across cultural contexts.
                         </blockquote>
                         <div class="card__meta">
-                            <span class="tag">Implications</span>
-                            <span class="tag">Equity</span>
-                            <span class="tag">Critical Theory</span>
-                            <span class="tag">Access</span>
+                            <span class="tag">Multimodality</span>
+                            <span class="tag">Visual</span>
+                            <span class="tag">Gestural</span>
+                            <span class="tag">Representation</span>
                         </div>
-                        <!-- New image added below the meta tags -->
-                        <img src="https://github.com/oeybers-cpu/knowledge_structures/blob/main/splitpic.png?raw=true"
-                             alt="Split image showing a student's contrasting emotional states while studying"
-                             style="width: 100%; max-width: 500px; height: auto; margin: 15px auto; display: block; border-radius: 8px; border: 1px solid rgba(207, 64, 255, 0.3);">
                     </div>
                     <footer class="card__footer">
-                        Understanding the wider significance of the relationship between knowledge structure and literacy practices.
+                        Understanding the role of different modes in constructing academic meaning.
                     </footer>
                 </div>
             </div>
