--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
             <div class="content-section">
                 <h2 class="section-title">Application & Practice</h2>
                 <div class="articles-container">
-                    <!-- Card 3: Genre and Mode Switching -->
+                   <!-- Card 3: Genre and Mode Switching (MODIFIED) -->
                     <div class="card">
                         <div class="card__header">
                             <h2 class="card__title">
@@ -967,8 +967,8 @@
                             </h2>
                         </div>
                         <div class="card__body">
-                            <img src="https://github.com/oeybers-cpu/a_lit_models/blob/main/al%20class.png?raw=true"
-                                 alt="Students switching between different communication modes in classroom setting"
+                            <img src="https://github.com/oeybers-cpu/knowledge_structures/blob/main/1757649528.png?raw=true"
+                                 alt="Illustration showing the relationship between Bernstein's Knowledge Structures and Lea & Street's Academic Literacies Model"
                                  class="card__image">
                             <p>Bernstein's framework helps us understand the complexity of student experience in navigating academic literacies. The requirement to switch between genres and modes reflects the underlying structure of the knowledge domain.</p>
                             <p>The academic literacies model emphasises that these shifts are not merely technical. Each genre and mode embodies different social meanings, identities, and power relations. Students must learn not just the forms, but the social practices embedded within them.</p>
@@ -982,6 +982,10 @@
                                 <span class="tag">Multimodality</span>
                             </div>
                         </div>
+                        <footer class="card__footer">
+                            Recognising the complex shifts students make between academic communication forms.
+                        </footer>
+                    </div>
                         <footer class="card__footer">
                             Recognising the complex shifts students make between academic communication forms.
                         </footer>
